<resources>
    <string name="app_name">Patha Sathi </string>
    <string name="google_map_api">AIzaSyDWom8PTLlfSbpF-IVj-zQExHBeW4YmAUU</string>
    <string name="cloud_message_server_key">AAAA7lzCl5U:APA91bF1S7cUxauyPEVZBdNsIf12mdL4Fu9JaMkRNXnt7FMAyWavQfGZBLLuCJGeyAEWGZarmjyEN525vyuRNn270bnbKyT_fL1lcRDp58hkHOEpKTeQ1cNGqCOPPdafspvANO2JMJlz</string>

    <!--    Home fragment String -->
    <string name="my_patha_sathi">My Pathasathi</string>
    <string name="current_location">Current Location</string>
    <string name="anyone_there">Anyone There?</string>
    <string name="help">Help</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="mark_as_a_safe">Mark as a Safe</string>
    <string name="patha_sathi">PATHASHATHI</string>
    <string name="instant_camera">Instant Camera</string>
    <string name="toolbar_menu">Toolbar Menu</string>

    <!--    User current Location Activity Strings-->
    <string name="title_location_permission">App need to Access Your Location</string>
    <string name="text_location_permission">App need to Access Your Location</string>
    <string name="ok">OK</string>
    <string name="user_current_location_title">Current Location</string>

    <!-- Notification List String  -->
    <string-array name="notification_list">
        <item>Arif posted for help </item>
        <item>Khalid wants add you as pathosathi </item>
        <item>Lelin changed his profile picture</item>
        <item>Tonmoy likes your post</item>
        <item>Mishu wants add you as pathosathi </item>
        <item>Mitu accepted your pathosathi request </item>
        <item>Mousumi commented on your post</item>
        <item>You have new friend suggestion </item>
        <item>Kamona wants add you as pathosathi </item>
        <item>Sumaiya wants add you as pathosathi </item>
        <item>Arif posted for help </item>
        <item>Khalid wants add you as pathosathi </item>
        <item>Lelin changed his profile picture</item>
        <item>Tonmoy likes your post</item>
        <item>Mishu wants add you as pathosathi </item>
        <item>Mitu accepted your pathosathi request </item>
        <item>Mousumi commented on your post</item>
        <item>You have new friend suggestion </item>
        <item>Kamona wants add you as pathosathi </item>
        <item>Sumaiya wants add you as pathosathi </item>
    </string-array>

    <string name="title_activity_current_location">Map</string>

    <!-- Strings related to login and registration -->
    <string name="email">smrahmanarif@gmail.com</string>
    <string name="example_email">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="become_a_pathasathi">Become a PathaSathi</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="become_a_patha_sathi">Become a PathaSathi</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>


    <!-- Bottom navigation String -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="amar_pathasathi">Amar PathaSathi</string>
    <string name="move">Move</string>

    <!--    Navigation drawer string -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="header_name">Arif Rahman</string>
    <string name="make_pathasathi">Make PathaSathi</string>
    <string name="share">Share Location</string>
    <string name="live_chat">Live Chat</string>
    <string name="recent_patha_sathi">Recent PathaSathi</string>

    <!--Navigation Drawer others options-->
    <string name="others_activity">Others Activity</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log Out</string>

    <!--  My PathaSathi Activity String  -->
    <string name="user_name">Arif Rahman</string>

    <!--Emergency Call Dialog String     -->
    <string name="near_by_police_station">Call Near By Police Station</string>
    <string name="near_by_fire_station">Call Near By Fire Station</string>
    <string name="near_by_rab">Call Near By RAB</string>
    <string name="near_by_ambulance">Call Near By Ambulance</string>
    <string name="near_by_patha_sathi">Call Near By PathaSathi</string>
    <string name="threepale_nine">999</string>
    <string name="dismiss">Dismiss</string>


    <!-- Make Pathasathi Activity String -->
    <string name="all_pathasathi">All PathaSathi</string>
    <string name="suggestion">Suggestion</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>

    <!-- Chat room String   -->

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>

</resources>
