<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/make_pathasathi_id"
            android:checked="true"
            android:icon="@drawable/ic_make_pathasathi"
            android:title="@string/make_pathasathi" />

        <item
            android:id="@+id/share_location_id"
            android:checked="false"
            android:icon="@drawable/ic_share_location"
            android:title="@string/share" />

        <item
            android:id="@+id/live_chat_id"
            android:checked="false"
            android:icon="@drawable/ic_chat"
            android:title="@string/live_chat" />

        <item
            android:id="@+id/recent_patha_sathi_id"
            android:checked="false"
            android:icon="@drawable/ic_recent_added"
            android:title="@string/recent_patha_sathi" />


    </group>

    <item android:title="@string/others_activity">
        <menu>

            <item
                android:id="@+id/about_id"
                android:checked="false"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
            <item
                android:id="@+id/setting_id"
                android:checked="false"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting" />
            <item
                android:id="@+id/log_out_id"
                android:checked="false"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/log_out" />

        </menu>

    </item>

</menu>