<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/call_police_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_policeman"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/near_by_police_station"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_green" />

            <TextView
                android:id="@+id/call_fire_station_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_fire_station"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/near_by_fire_station"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_green"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/call_rab_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_rab"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/near_by_rab"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_green"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/call_ambulance_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_ambulance"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/near_by_ambulance"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_green" />

            <TextView
                android:id="@+id/call_friends_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_friendship"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/near_by_patha_sathi"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_green" />

            <TextView
                android:id="@+id/call_999_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_phone_call"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/threepale_nine"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_green" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/dismiss_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dismiss" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>